# movie-struct

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: movie.cpp  movie.h
utils/: input_validation.cpp  input_validation.h  menu_option.cpp  menu_option.h
